--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
